<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="0dp"
    android:paddingRight="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="0dp"
        android:paddingRight="0dp">

        <TextView
            android:id="@+id/midPoint"
            android:layout_width="303dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:maxLines="1"
            android:padding="12dp"
            android:text="@string/midpointLabel"
            android:background="#f56558"
            android:textSize="18sp" />

        <Button
            android:id="@+id/share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:text="@string/shareLabel"
            android:onClick="clickToShare"/>
    </LinearLayout>


    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:padding="0dp"
        tools:context=".MapsActivity" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="0dp"
        android:paddingRight="0dp">

        <TextView
            android:id="@+id/specialLocation"
            android:layout_width="303dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:maxLines="1"
            android:padding="12dp"
            android:text="@string/specialLocationLabel"
            android:background="#f0b1e6"
            android:textSize="18sp"
            android:visibility="invisible" />

        <Button
            android:id="@+id/shareSpecial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:text="@string/shareLabel"
            android:visibility="invisible" />
    </LinearLayout>




        <TextView
            android:id="@+id/locA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:padding="12dp"
            android:text="@string/locALabel"
            android:background="#2eb524"
            android:textSize="18sp" />


    <TextView
        android:id="@+id/locB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#25aedb"
        android:maxLines="1"
        android:padding="12dp"
        android:text="@string/locBLabel"
        android:textSize="18sp" />

    <Button
        android:id="@+id/goToSettings"
        android:layout_width="match_parent"
        android:padding="0dp"
        android:layout_height="wrap_content"
        android:onClick="returnToSettings"
        android:text="@string/settingsLabel" />
</LinearLayout>